Fix table in Annuity Loans on mobile.

--- a/css/extra.css
+++ b/css/extra.css
@@ -100,3 +100,10 @@ mjx-container[display="true"] {
     overflow-y: hidden;
     min-width: 0 ! important;
 }
+
+.overflow {
+    overflow-x: auto;
+    overflow-y: hidden;
+    min-width: 0 ! important;
+    margin: 0;
+}
